--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/now-ui-kit.css" rel="stylesheet" />
     <style type="text/css">
         h1,h2,h3,h4,h5,h6,p{
-            margin-top: 0px;
+            margin-top: 5px;
             margin-bottom: 0px;
         }
         .navbar{
@@ -351,11 +351,60 @@
     </div>
 </div>
 
-<section>
-  <div class="container">
-      <div class="row">
+<section style="padding:60px 0px;">
+<h1 class="text-center title" style="font-size: 30px">Doctors</h1>
+  <div class="container text-center">
+      <div class="row" style="margin-top: 20px;">
           <div class="col-sm-4">
-              <img src="">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+           <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+           <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+      </div>
+
+      <div class="row" style="margin-top: 20px;">
+          <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+           <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+           <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+      </div>
+
+       <div class="row" style="margin-top: 20px;">
+          <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+           <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
+          </div>
+           <div class="col-sm-4">
+             <img src="http://via.placeholder.com/150x150" class="squared img-raised img-fluid">
+             <h4 class="title">Name</h4>
+             <p class="category text-primary">Doctor</p>
           </div>
       </div>
   </div>  
