--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>ThirdI</title>
+    <title>Third i Imaging and Diagnostics</title>
     <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/323944625339367436/323944653747519498/hello.png">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -109,22 +109,22 @@
             <div class="carousel-item active">
                 <img class="d-block img-fluid" src="http://via.placeholder.com/1600x500" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>Third i diagnostics</h3>
-                    <p>Third i diagnostics</p>
+                    <h3>Third i Imaging and Diagnostics</h3>
+                    <p>Slide 1</p>
                 </div>
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid" src="http://via.placeholder.com/1600x500" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Third i diagnostics</h3>
-                <p>Third i diagnostics</p>
+                <h3>Third i Imaging and Diagnostics</h3>
+                <p>Slide 2</p>
             </div>
         </div>
         <div class="carousel-item">
           <img class="d-block img-fluid" src="http://via.placeholder.com/1600x500" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third i diagnostics</h3>
-            <p>Third i diagnostics</p>
+            <h3>Third i Imaging and Diagnostics</h3>
+            <p>Slide 3</p>
         </div>
     </div>
 </div>
