--- a/doctors.html
+++ b/doctors.html
@@ -66,19 +66,19 @@
                     <span class="navbar-toggler-bar bar2"></span>
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
-                <a class="navbar-brand" href="#" rel="tooltip" title="">
+                <a class="navbar-brand" href="/" rel="tooltip" title="">
                     <img src="https://cdn.discordapp.com/attachments/323944625339367436/323944653747519498/hello.png" width="150">
                 </a>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="assets/blurred-image-1.jpg">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/doctors">
                             <p>Doctor Profiles</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/services">
                             <p>Services</p>
                         </a>
                     </li>
