--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
     .card .card-block {
         min-height: 120px;
     }
+        .center-block {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+
+    }
 </style>
 
 </head>
@@ -191,17 +200,19 @@
 
     <section>
         <h1 class="text-center title" style="font-size: 30px">Infrastructure</h1>
+        <div class="separator separator-primary"></div>
+
     </section>
 
 
     <div class="container">
-       <div class="row">
+     <div class="row">
         <div class="col-md-10 offset-md-1 col-xl-6 offset-xl-0">
             <div class="card">
                 <div class="card-block">
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="img-fluid" src="https://cdn.discordapp.com/attachments/346725213007773698/346892063004033024/1.png" >
+                            <img class="img-fluid center-block" src="https://cdn.discordapp.com/attachments/346725213007773698/346892063004033024/1.png" >
                         </div>
                         <div class="col-sm-8">
                             <strong>Philips Ingenia dSync MRI Digital 70Cm</strong>
@@ -217,7 +228,7 @@
                 <div class="card-block">
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="img-fluid" src="https://cdn.discordapp.com/attachments/346725213007773698/346892064123781120/2.jpg">
+                            <img class="img-fluid center-block" src="https://cdn.discordapp.com/attachments/346725213007773698/346892064123781120/2.jpg">
                         </div>
                         <div class="col-sm-8">
                             <strong>GE Optima 660CT FREEdom Edition 4D 500S</strong>
@@ -234,7 +245,7 @@
                 <div class="card-block">
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="img-fluid" src="https://cdn.discordapp.com/attachments/346725213007773698/346892056641142804/3.jpg">
+                            <img class="img-fluid center-block" src="https://cdn.discordapp.com/attachments/346725213007773698/346892056641142804/3.jpg">
                         </div>
                         <div class="col-sm-8">
                             <strong>Fuji FDR Smart f Digital Radiography </strong>
@@ -251,26 +262,26 @@
                 <div class="card-block">
                     <div class="row">
                         <div class="col-sm-4">
-                            <img class="img-fluid" src="https://cdn.discordapp.com/attachments/346725213007773698/346892057509363726/4.jpg">
+                            <img class="img-fluid center-block" src="https://cdn.discordapp.com/attachments/346725213007773698/346892057509363726/4.jpg">
                         </div>
                         <div class="col-sm-8">
                             <strong>Bet Medical Lilyum Mammography </strong>
                             <p>The Lilyum in BYM version is fitted with an isocentric C-Arm that allows all
-breast projections without adjusting height of
-the C-Arm. The isocentric rotation eliminates the C-Arm height adjustment
-when doing Cranio.
+                                breast projections without adjusting height of
+                                the C-Arm. The isocentric rotation eliminates the C-Arm height adjustment
+                                when doing Cranio.
                             </p>
                         </div>
                     </div>
                 </div>
             </div>  
         </div>
-        <div class="col-md-10 offset-md-1 col-xl-6 offset-xl-0">
+        <div class="col-md-10 offset-md-1 col-xl-6 offset-xl-3">
             <div class="card">
                 <div class="card-block">
                     <div class="row">
                         <div class="col-sm-4">
-                        <img src="https://cdn.discordapp.com/attachments/346725213007773698/346892059371896833/5.jpg">
+                            <img class="img-fluid center-block" src="https://cdn.discordapp.com/attachments/346725213007773698/346892059371896833/5.jpg">
                         </div>
                         <div class="col-sm-8">
                             <strong>EPIQ 7G Philips Untrasound &amp; Color Doppler</strong>
@@ -281,53 +292,49 @@ when doing Cranio.
                 </div>
             </div>  
         </div>
-
-
-
-
     </div>
 
-    
+     <section>
+        <h1 class="text-center title" style="font-size: 30px">Contact</h1>
+        <div class="separator separator-primary"></div>
+
+    </section>
+
+
+<iframe frameborder="0" style="border:0;width: 100%;height: 400px;" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ83XLYmsoODoRrfBTxCtG-M0&key=AIzaSyCnC94RHdI3svE9S2xAeRgcBeETKUzB4GI" allowfullscreen></iframe>
 
 
 
-<footer class="footer">
-    <div class="container">
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">
-                        About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        Contact
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="copyright">
-            &copy;
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
+    <footer class="footer">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/doctors">
+                            Doctors
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/services">
+                            Services
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="copyright">
+                &copy;
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 </body>
 <!--   Core JS Files   -->
 <script src="js/jquery.3.2.1.min.js" type="text/javascript"></script>
 <script src="js/tether.min.js" type="text/javascript"></script>
-
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
-<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="js/now-ui-kit.js" type="text/javascript"></script>
 
 </html>
