--- a/services.html
+++ b/services.html
@@ -92,11 +92,11 @@
                             <p>Research</p>
                         </a>
                     </li-->
-                    <li class="nav-item">
+                    <!--li class="nav-item">
                         <a class="nav-link" href="#">
                             <p>Contact</p>
                         </a>
-                    </li>
+                    </li-->
                 </ul>
             </div>
         </div>
