--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,16 @@
                             <p>Services</p>
                         </a>
                     </li>
+                    <!--li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <p>News</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <p>Research</p>
+                        </a>
+                    </li-->
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">
                             <p>Contact</p>
@@ -91,35 +101,25 @@
             </div>
         </div>
     </nav>
-    <section style="margin-top: 30px;"> 
-        <div class="container">
-           <h1 class="text-center title" style="font-size: 30px">Services Offered</h1>
-        <div class="separator separator-primary"></div>
-
-           <ul>
-            <li>MRI Ingenia 1.5 Digital Widebore 70cm</li>
-            <li>CT Optima 660 FREEdom Edition 4D 500 Slice with ADW</li>
-            <li>Epiq 7G Ultrasound &amp; Colour Doppler with Volume Probes</li>
-            <li>Affinity 50 Ultrasound &amp; Colour Doppler</li>
-            <li>Fuji FDR Smart f Digital Radiography</li>
-            <li>Fuji Computer Radiography</li>
-            <li>Lily Mammography</li>
-            <li>Complete Lab Services </li>
-            <li>All Comprehensive Health Packages</li>
-            <li>Philips Ingenia dSync MRI Digital 70Cm</li>
-            <li>GE Optima 660CT FREEdom Edition 4D 500 Slice</li>
-            <li>Fuji FDR Smart f Digital Radiography </li>
-            <li>Bet Medical Lilyum Mammography </li>
-            <li>EPIQ 7G Philips Untrasound &amp; Color Doppler</li>
-        </ul>
-
+    <section style="padding: 60px 0px">
+        
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h6>2-26-19,Mythili Street,<br>
+                    Lane Behind Janmabhoomi Park, Srinagar,<br>
+                    Kakinada- 533003, Andhra Pradesh.<br>
+                </h6>
+            </div>
+            <div class="col-sm-6">
+                <h6>0884 - 2354989, 2364988, 2384989.</h6>
+            </div>
+        </div>
     </div>
-</section>
+        </section>
 
 
-
-
-
+    <iframe frameborder="0" style="border:0;width: 100%;height: 400px;" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ83XLYmsoODoRrfBTxCtG-M0&key=AIzaSyCnC94RHdI3svE9S2xAeRgcBeETKUzB4GI" allowfullscreen></iframe>
 
 </body>
 <!--   Core JS Files   -->
