--- a/doctors.html
+++ b/doctors.html
@@ -92,27 +92,38 @@
                             <p>Research</p>
                         </a>
                     </li-->
-                    <!--li class="nav-item">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">
                             <p>Contact</p>
                         </a>
-                    </li-->
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <section style="padding:60px 0px;">
-        <h1 class="text-center title" style="font-size: 30px">Doctors</h1>
+        <h1 class="text-center title" style="font-size: 30px">Faculty</h1>
+        <div class="separator separator-primary"></div>
+
         <div class="container text-center">
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                    <img src="http://1.bp.blogspot.com/-l4Tp9w6-1_Q/UdzppAwbZLI/AAAAAAAAAIU/wV9KfX21l7w/s1600/drsubbaraokakarla2004.jpg" class="squared img-raised" width="150">
+                    <h4 class="title" style="font-size: 18px;">Padma Shri Dr.Kakarla Subba Rao</h4>
+                    <p class="category text-primary">Radiologist</p>
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
             <div class="row" style="margin-top: 20px;">
                 <div class="col-sm-4">
                     <img src="https://cdn.discordapp.com/attachments/346725213007773698/346900540485009409/04220aea-29f0-431f-885c-146523d484b8.jpg" class="squared img-raised" width="150">
-                    <h4 class="title">Dr T Nageshwara Rao</h4>
+                    <h4 class="title">Dr T Nageswara Rao</h4>
                     <p class="category text-primary">Radiologist</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
-                    <h4 class="title">Dr Swathi</h4>
+                    <h4 class="title">Dr N Swathi</h4>
                     <p class="category text-primary">Radiologist</p>
                 </div>
                 <div class="col-sm-4">
