--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                             <p>Research</p>
                         </a>
                     </li-->
-                    <!--li class="nav-item">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">
                             <p>Contact</p>
                         </a>
-                    </li-->
+                    </li>
                 </ul>
             </div>
         </div>
