--- a/contact.html
+++ b/contact.html
@@ -104,17 +104,15 @@
     <section style="padding: 60px 0px">
         
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
+             <h1 class="text-center title" style="font-size: 30px">Contact</h1>
+        <div class="separator separator-primary"></div>
+            <div class="text-center">
                 <h6>2-26-19,Mythili Street,<br>
                     Lane Behind Janmabhoomi Park, Srinagar,<br>
                     Kakinada- 533003, Andhra Pradesh.<br>
+                    <h6>0884 - 2354989, 2364988, 2384989.</h6>
                 </h6>
             </div>
-            <div class="col-sm-6">
-                <h6>0884 - 2354989, 2364988, 2384989.</h6>
-            </div>
-        </div>
     </div>
         </section>
 
