--- a/services.html
+++ b/services.html
@@ -96,21 +96,16 @@
            <h1 class="text-center title" style="font-size: 30px">Services Offered</h1>
         <div class="separator separator-primary"></div>
 
-           <ul>
+           <ul style="font-size: 24px;">
             <li>MRI Ingenia 1.5 Digital Widebore 70cm</li>
             <li>CT Optima 660 FREEdom Edition 4D 500 Slice with ADW</li>
             <li>Epiq 7G Ultrasound &amp; Colour Doppler with Volume Probes</li>
             <li>Affinity 50 Ultrasound &amp; Colour Doppler</li>
             <li>Fuji FDR Smart f Digital Radiography</li>
             <li>Fuji Computer Radiography</li>
-            <li>Lily Mammography</li>
+            <li>Lilyum Mammography</li>
             <li>Complete Lab Services </li>
             <li>All Comprehensive Health Packages</li>
-            <li>Philips Ingenia dSync MRI Digital 70Cm</li>
-            <li>GE Optima 660CT FREEdom Edition 4D 500 Slice</li>
-            <li>Fuji FDR Smart f Digital Radiography </li>
-            <li>Bet Medical Lilyum Mammography </li>
-            <li>EPIQ 7G Philips Untrasound &amp; Color Doppler</li>
         </ul>
 
     </div>
