--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
                 <a class="navbar-brand" href="/" rel="tooltip" title="">
-                    <img src="https://cdn.discordapp.com/attachments/323944625339367436/323944653747519498/hello.png" width="150">
+                    <img src="https://raw.githubusercontent.com/third-i-imaging/brand-assets/master/third-i-logo.jpg" width="150">
                 </a>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="assets/blurred-image-1.jpg">
