--- a/doctors.html
+++ b/doctors.html
@@ -119,7 +119,7 @@
                 <div class="col-sm-4">
                     <img src="https://cdn.discordapp.com/attachments/346725213007773698/346900540485009409/04220aea-29f0-431f-885c-146523d484b8.jpg" class="squared img-raised" width="150">
                     <h4 class="title">Dr T Nageswara Rao</h4>
-                    <p class="category text-primary">Radiologist</p>
+                    <p class="category text-primary" style="margin-top: 3px;">Radiologist,  Managing Director</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
