--- a/services.html
+++ b/services.html
@@ -93,10 +93,10 @@
     </nav>
     <section style="margin-top: 30px;"> 
         <div class="container">
-           <h1 class="text-center title" style="font-size: 30px">Services Offered</h1>
-        <div class="separator separator-primary"></div>
-
-           <ul style="font-size: 24px;">
+         <h1 class="text-center title" style="font-size: 30px">Services Offered</h1>
+         <div class="separator separator-primary"></div>
+         <h4 style="font-weight: 600">Radiology</h4>
+         <ul style="font-size: 24px;">
             <li>MRI Ingenia 1.5 Digital Widebore 70cm</li>
             <li>CT Optima 660 FREEdom Edition 4D 500 Slice with ADW</li>
             <li>Epiq 7G Ultrasound &amp; Colour Doppler with Volume Probes</li>
@@ -104,10 +104,9 @@
             <li>Fuji FDR Smart f Digital Radiography</li>
             <li>Fuji Computer Radiography</li>
             <li>Lilyum Mammography</li>
-            <li>Complete Lab Services </li>
-            <li>All Comprehensive Health Packages</li>
         </ul>
-
+        <h4 style="font-weight: 600">Pathology</h4>
+        <h4 style="font-weight: 600">Microbiology</h4>
     </div>
 </section>
 
