--- a/doctors.html
+++ b/doctors.html
@@ -122,7 +122,7 @@
                     <p class="category text-primary" style="margin-top: 3px;">Radiologist,  Managing Director</p>
                 </div>
                 <div class="col-sm-4">
-                    <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
+                    <img src="https://media.discordapp.net/attachments/346725213007773698/352378503603421184/image1.JPG?width=451&height=601" class="squared img-raised img-fluid" width="150">
                     <h4 class="title">Dr N Swathi</h4>
                     <p class="category text-primary">Radiologist</p>
                 </div>
@@ -135,7 +135,7 @@
 
             <div class="row" style="margin-top: 20px;">
               <div class="col-sm-4">
-                <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
+                <img src="https://media.discordapp.net/attachments/346725213007773698/352378481926995968/image1_1.JPG?width=451&height=601" class="squared img-raised img-fluid" width="150">
                 <h4 class="title">Dr K Alekya</h4>
                 <p class="category text-primary">Radiologist</p>
             </div>
