Update Doctor names

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Third i Imaging and Diagnostics</title>
+    <title>Third i Medial Imaging and Diagnostics</title>
     <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/323944625339367436/323944653747519498/hello.png">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
