--- a/doctors.html
+++ b/doctors.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Third i Imaging and Diagnostics</title>
+    <title>Third i Medial Imaging and Diagnostics</title>
     <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/323944625339367436/323944653747519498/hello.png">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -82,16 +82,6 @@
                             <p>Services</p>
                         </a>
                     </li>
-                    <!--li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p>News</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p>Research</p>
-                        </a>
-                    </li-->
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">
                             <p>Contact</p>
@@ -111,7 +101,7 @@
                 <div class="col-sm-4">
                     <img src="http://1.bp.blogspot.com/-l4Tp9w6-1_Q/UdzppAwbZLI/AAAAAAAAAIU/wV9KfX21l7w/s1600/drsubbaraokakarla2004.jpg" class="squared img-raised" width="150">
                     <h4 class="title" style="font-size: 18px;">Padma Shri Dr.Kakarla Subba Rao</h4>
-                    <p class="category text-primary">Radiologist</p>
+                    <p class="category text-primary">Honorary Chairman</p>
                 </div>
                 <div class="col-sm-4"></div>
             </div>
@@ -119,15 +109,15 @@
                 <div class="col-sm-4">
                     <img src="https://cdn.discordapp.com/attachments/346725213007773698/346900540485009409/04220aea-29f0-431f-885c-146523d484b8.jpg" class="squared img-raised" width="150">
                     <h4 class="title">Dr T Nageswara Rao</h4>
-                    <p class="category text-primary" style="margin-top: 3px;">Radiologist,  Managing Director</p>
+                    <p class="category text-primary" style="margin-top: 3px;">Managing Director &amp; Radiologist</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://media.discordapp.net/attachments/346725213007773698/352378503603421184/image1.JPG?width=451&height=601" class="squared img-raised img-fluid" width="150">
-                    <h4 class="title">Dr N Swathi</h4>
-                    <p class="category text-primary">Radiologist</p>
+                    <h4 class="title">Dr N Swathi, M.D</h4>
+                    <p class="category text-primary">Executive Director &amp; Radiologist</p>
                 </div>
                 <div class="col-sm-4">
-                    <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
+                    <img src="https://media.discordapp.net/attachments/346725213007773698/352524475054555147/resize_pic_1.jpg" class="squared img-raised img-fluid" width="150">
                     <h4 class="title">Dr V Ashok</h4>
                     <p class="category text-primary">Radiologist</p>
                 </div>
