--- a/doctors.html
+++ b/doctors.html
@@ -151,7 +151,7 @@
      <div class="col-sm-4">
          <img src="https://media.discordapp.net/attachments/346725213007773698/352717126177652736/image1_2.JPG?width=511&height=600" class="squared img-raised img-fluid" width="150">
          <h4 class="title">Dr Durga Rani</h4>
-         <p class="category text-primary">Micro Biologist</p>
+         <p class="category text-primary">Microbiologist</p>
      </div>
      <div class="col-sm-2"></div>
 
