Doctor photos update

--- a/doctors.html
+++ b/doctors.html
@@ -135,7 +135,7 @@
              <p class="category text-primary">Radiologist</p>
          </div>
          <div class="col-sm-4">
-             <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
+             <img src="https://cdn.discordapp.com/attachments/346725213007773698/359678079355846656/image1_3.JPG" class="squared img-raised img-fluid" width="150">
              <h4 class="title">Dr Rajani</h4>
              <p class="category text-primary">Pathologist</p>
          </div>
@@ -144,7 +144,7 @@
      <div class="row" style="margin-top: 20px;">
        <div class="col-sm-2"></div>
        <div class="col-sm-4">
-         <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
+         <img src="https://cdn.discordapp.com/attachments/346725213007773698/359678908075081728/image1_4.JPG" class="squared img-raised img-fluid" width="150">
          <h4 class="title">Dr Vijaya Bhaskar</h4>
          <p class="category text-primary">Pathologist</p>
      </div>
