Update doctor profiles

--- a/doctors.html
+++ b/doctors.html
@@ -108,36 +108,36 @@
             <div class="row" style="margin-top: 20px;">
                 <div class="col-sm-4">
                     <img src="https://cdn.discordapp.com/attachments/346725213007773698/346900540485009409/04220aea-29f0-431f-885c-146523d484b8.jpg" class="squared img-raised" width="150">
-                    <h4 class="title">Dr T Nageswara Rao</h4>
+                    <h4 class="title">Dr T.Nageswara Rao, M.D.</h4>
                     <p class="category text-primary" style="margin-top: 3px;">Managing Director &amp; Radiologist</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://media.discordapp.net/attachments/346725213007773698/352718193233494016/image1_3.JPG?width=433&height=601" class="squared img-raised img-fluid" width="150">
-                    <h4 class="title">Dr N Swathi, M.D</h4>
+                    <h4 class="title">Dr N.Swathi, M.D.</h4>
                     <p class="category text-primary">Executive Director &amp; Radiologist</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://media.discordapp.net/attachments/346725213007773698/352524475054555147/resize_pic_1.jpg" class="squared img-raised img-fluid" width="150">
-                    <h4 class="title">Dr V Ashok</h4>
-                    <p class="category text-primary">Radiologist</p>
+                    <h4 class="title">Dr V.Ashok, M.D.</h4>
+                    <p class="category text-primary">Consultant Radiologist</p>
                 </div>
             </div>
 
             <div class="row" style="margin-top: 20px;">
               <div class="col-sm-4">
                 <img src="https://media.discordapp.net/attachments/346725213007773698/352378481926995968/image1_1.JPG?width=451&height=601" class="squared img-raised img-fluid" width="150">
-                <h4 class="title">Dr K Alekya</h4>
-                <p class="category text-primary">Radiologist</p>
+                <h4 class="title">Dr K.Alekya</h4>
+                <p class="category text-primary">Consultant Radiologist</p>
             </div>
             <div class="col-sm-4">
              <img src="https://cdn.discordapp.com/attachments/346725213007773698/346899444987592704/20484wall.png" class="squared img-raised img-fluid" width="150">
              <h4 class="title">Dr Sravya</h4>
-             <p class="category text-primary">Radiologist</p>
+             <p class="category text-primary">Consultant Radiologist</p>
          </div>
          <div class="col-sm-4">
              <img src="https://cdn.discordapp.com/attachments/346725213007773698/359678079355846656/image1_3.JPG" class="squared img-raised img-fluid" width="150">
              <h4 class="title">Dr Rajani</h4>
-             <p class="category text-primary">Pathologist</p>
+             <p class="category text-primary">Consultant Pathologist</p>
          </div>
      </div>
 
@@ -145,13 +145,13 @@
        <div class="col-sm-2"></div>
        <div class="col-sm-4">
          <img src="https://cdn.discordapp.com/attachments/346725213007773698/359678908075081728/image1_4.JPG" class="squared img-raised img-fluid" width="150">
-         <h4 class="title">Dr Vijaya Bhaskar</h4>
-         <p class="category text-primary">Pathologist</p>
+         <h4 class="title">Dr Vijaya Bhaskar, M.D</h4>
+         <p class="category text-primary">Consultant Pathologist</p>
      </div>
      <div class="col-sm-4">
          <img src="https://media.discordapp.net/attachments/346725213007773698/352717126177652736/image1_2.JPG?width=511&height=600" class="squared img-raised img-fluid" width="150">
-         <h4 class="title">Dr Durga Rani</h4>
-         <p class="category text-primary">Microbiologist</p>
+         <h4 class="title">Dr Durga Rani, M.D,</h4>
+         <p class="category text-primary">Consultant Microbiologist</p>
      </div>
      <div class="col-sm-2"></div>
 
