--- a/doctors.html
+++ b/doctors.html
@@ -145,12 +145,12 @@
        <div class="col-sm-2"></div>
        <div class="col-sm-4">
          <img src="https://cdn.discordapp.com/attachments/346725213007773698/359678908075081728/image1_4.JPG" class="squared img-raised img-fluid" width="150">
-         <h4 class="title">Dr Vijaya Bhaskar, M.D</h4>
+         <h4 class="title">Dr Vijaya Bhaskar, M.D.</h4>
          <p class="category text-primary">Consultant Pathologist</p>
      </div>
      <div class="col-sm-4">
          <img src="https://media.discordapp.net/attachments/346725213007773698/352717126177652736/image1_2.JPG?width=511&height=600" class="squared img-raised img-fluid" width="150">
-         <h4 class="title">Dr Durga Rani, M.D,</h4>
+         <h4 class="title">Dr Durga Rani, M.D.</h4>
          <p class="category text-primary">Consultant Microbiologist</p>
      </div>
      <div class="col-sm-2"></div>
