--- a/doctors.html
+++ b/doctors.html
@@ -100,7 +100,7 @@
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
                     <img src="http://1.bp.blogspot.com/-l4Tp9w6-1_Q/UdzppAwbZLI/AAAAAAAAAIU/wV9KfX21l7w/s1600/drsubbaraokakarla2004.jpg" class="squared img-raised" width="150">
-                    <h4 class="title" style="font-size: 18px;">Padma Shri Dr.Kakarla Subba Rao</h4>
+                    <h4 class="title" style="font-size: 18px;">Padma Shri Prof. Dr.Kakarla Subba Rao</h4>
                     <p class="category text-primary">Honorary Chairman</p>
                 </div>
                 <div class="col-sm-4"></div>
