--- a/doctors.html
+++ b/doctors.html
@@ -100,7 +100,7 @@
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
                     <img src="http://1.bp.blogspot.com/-l4Tp9w6-1_Q/UdzppAwbZLI/AAAAAAAAAIU/wV9KfX21l7w/s1600/drsubbaraokakarla2004.jpg" class="squared img-raised" width="150">
-                    <h4 class="title" style="font-size: 18px;">Padma Shri Prof. Dr.Kakarla Subba Rao</h4>
+                    <h4 class="title" style="font-size: 18px;">Padma Shri Prof.Kakarla Subba Rao</h4>
                     <p class="category text-primary">Honorary Chairman</p>
                 </div>
                 <div class="col-sm-4"></div>
@@ -135,7 +135,7 @@
              <p class="category text-primary">Consultant Radiologist</p>
          </div>
          <div class="col-sm-4">
-             <img src="https://cdn.discordapp.com/attachments/346725213007773698/359678079355846656/image1_3.JPG" class="squared img-raised img-fluid" width="150">
+             <img src="https://cdn.discordapp.com/attachments/346725213007773698/359684264926773259/image1_5.JPG" class="squared img-raised img-fluid" width="150">
              <h4 class="title">Dr Rajani</h4>
              <p class="category text-primary">Consultant Pathologist</p>
          </div>
